src/test/deca/syntax/invalid/created/miscellaneous/infinite_int2.deca
// Description :
//    test d'un int infinite
//
// Resultats :
//		Erreur lexicographique
//    	Ligne 9:  int trop grand

{
int a = 20000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000;
}